[package]
name = "sonic_rs-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"
sonic-rs = { path = ".." }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
faststr = "0.2"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "fuzz_value"
path = "fuzz_targets/from_slice.rs"
test = false
doc = false
