[package]
edition = "2021"
name    = "sonic_rs-fuzz"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[dependencies]
faststr       = "0.2"
libfuzzer-sys = "0.4"
serde         = { version = "1.0", features = ["derive"] }
serde_json    = { version = "1.0", features = ["float_roundtrip"] }
sonic-rs      = { path = ".." }

[[bin]]
doc  = false
name = "fuzz_value"
path = "fuzz_targets/from_slice.rs"
test = false
