[package]
authors     = ["Volo Team <volo@cloudwego.io>"]
description = "Portable SIMD API for sonic-rs"
edition     = "2021"
license     = "Apache-2.0"
name        = "sonic-simd"
repository  = "https://github.com/cloudwego/sonic-rs"
version     = "0.1.2"

[features]
# enable avx512, requires Rust 1.89 or later, and also enable `avx512f` target feature
avx512 = []

[dependencies]
cfg-if = "1.0"
